#37 + TerraTowns Mock Server into my repo

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -17,6 +17,12 @@ tasks:
     command:
       http-server
 
+  
+  - name: sinatra
+    before: | 
+      bundle install
+      bundle exec ruby server.rb    
+
 vscode:
   extensions:
     - amazonwebservices.aws-toolkit-vscode
